--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,6 @@
 platform = atmelavr
 board = nanoatmega328
 framework = arduino
-lib_deps = dmadison/ServoInput@^2.0.0
+lib_deps = 
+	dmadison/ServoInput@^2.0.0
+	nicohood/PinChangeInterrupt@^1.2.9
