--- a/platformio.ini
+++ b/platformio.ini
@@ -8,10 +8,29 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nanoatmega328]
+[platformio]
+default_envs = release
+
+[env:release]
 platform = atmelavr
 board = nanoatmega328
 framework = arduino
 lib_deps = 
 	dmadison/ServoInput@^2.0.0
 	nicohood/PinChangeInterrupt@^1.2.9
+	wizard97/SimplyAtomic@^1.0
+src_filter = +<*.h> +<main.cpp>
+targets = upload, monitor
+
+
+[env:calibrate]
+platform = atmelavr
+board = nanoatmega328
+framework = arduino
+lib_deps = 
+	dmadison/ServoInput@^2.0.0
+	nicohood/PinChangeInterrupt@^1.2.9
+	wizard97/SimplyAtomic@^1.0
+src_filter = +<*.h> +<Calibrate.cpp>
+targets = upload, monitor
+
