Add test from internet library

--- a/platformio.ini
+++ b/platformio.ini
@@ -34,3 +34,14 @@ lib_deps =
 src_filter = +<*.h> +<Calibrate.cpp>
 targets = upload, monitor
 
+[env:IBT-2]
+platform = atmelavr
+board = nanoatmega328
+framework = arduino
+lib_deps = 
+	dmadison/ServoInput@^2.0.0
+	nicohood/PinChangeInterrupt@^1.2.9
+	wizard97/SimplyAtomic@^1.0
+src_filter = +<*.h> +<IBT-2.cpp>
+targets = upload, monitor
+
