Add simple tests

--- a/platformio.ini
+++ b/platformio.ini
@@ -45,3 +45,13 @@ lib_deps =
 src_filter = +<*.h> +<IBT-2.cpp>
 targets = upload, monitor
 
+[env:simple]
+platform = atmelavr
+board = nanoatmega328
+framework = arduino
+lib_deps = 
+	dmadison/ServoInput@^2.0.0
+	nicohood/PinChangeInterrupt@^1.2.9
+	wizard97/SimplyAtomic@^1.0
+src_filter = +<*.h> +<Simple.cpp>
+targets = upload, monitor
