update platformio board for arduino "new"

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,45 +13,56 @@ default_envs = release
 
 [env:release]
 platform = atmelavr
-board = nanoatmega328
+board = nanoatmega328new
 framework = arduino
 lib_deps = 
 	dmadison/ServoInput@^2.0.0
 	nicohood/PinChangeInterrupt@^1.2.9
 	wizard97/SimplyAtomic@^1.0
-src_filter = +<*.h> +<main.cpp>
+build_src_filter = +<*.h> +<main.cpp>
 targets = upload, monitor
 
 
 [env:calibrate]
 platform = atmelavr
-board = nanoatmega328
+board = nanoatmega328new
 framework = arduino
 lib_deps = 
 	dmadison/ServoInput@^2.0.0
 	nicohood/PinChangeInterrupt@^1.2.9
 	wizard97/SimplyAtomic@^1.0
-src_filter = +<*.h> +<Calibrate.cpp>
+build_src_filter = +<*.h> +<Calibrate.cpp>
 targets = upload, monitor
 
 [env:IBT-2]
 platform = atmelavr
-board = nanoatmega328
+board = nanoatmega328new
 framework = arduino
 lib_deps = 
 	dmadison/ServoInput@^2.0.0
 	nicohood/PinChangeInterrupt@^1.2.9
 	wizard97/SimplyAtomic@^1.0
-src_filter = +<*.h> +<IBT-2.cpp>
+build_src_filter = +<*.h> +<IBT-2.cpp>
 targets = upload, monitor
 
 [env:simple]
 platform = atmelavr
-board = nanoatmega328
+board = nanoatmega328new
 framework = arduino
 lib_deps = 
 	dmadison/ServoInput@^2.0.0
 	nicohood/PinChangeInterrupt@^1.2.9
 	wizard97/SimplyAtomic@^1.0
-src_filter = +<*.h> +<Simple.cpp>
+build_src_filter = +<*.h> +<Simple.cpp>
+targets = upload, monitor
+
+[env:sleep]
+platform = atmelavr
+board = nanoatmega328new
+framework = arduino
+lib_deps = 
+	dmadison/ServoInput@^2.0.0
+	nicohood/PinChangeInterrupt@^1.2.9
+	wizard97/SimplyAtomic@^1.0
+build_src_filter = +<*.h> +<Sleep.cpp>
 targets = upload, monitor
